--- a/ejs/views/body.ejs
+++ b/ejs/views/body.ejs
@@ -217,7 +217,7 @@
                                           </div>
                                       </div>
                                     </div>
-                                    <div class="col-md-3 col-sm-6 project-item mix nature">
+                                    <!-- <div class="col-md-3 col-sm-6 project-item mix nature">
                                       <div class="thumb">
                                           <div class="image">
                                             <img src="img/portfolio_05.jpg">
@@ -256,7 +256,7 @@
                                             <a href="img/portfolio_big_08.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                                           </div>
                                       </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -414,7 +414,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="copyright-text">
-                                <p>Copyright &copy; 2019 Kindertagespflege Nounou</p>
+                                <p>Copyright &copy; 2020 Kindertagespflege Nounou</p>
                                 <a href="/impressum">Impressum</a>
                             </div>
                         </div>
@@ -423,18 +423,6 @@
                                 <ul>
                                     <li>
                                         <a href="#"><i class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-linkedin"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-rss"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="fa fa-dribbble"></i></a>
                                     </li>
                                 </ul>
                             </div>
