--- a/ejs/views/components/person.ejs
+++ b/ejs/views/components/person.ejs
@@ -8,12 +8,12 @@
                     <ul>
                         <li>
                             <div class="white-button">
-                                <a href="#" class="scroll-link" data-id="portfolio">Mehr</a>
+                                <a href="#portfolio" class="scroll-link" data-id="portfolio">Mehr</a>
                             </div>
                         </li>
                         <li>
                             <div class="primary-button">
-                                <a href="#">Termin vereinbaren</a>
+                                <a href="#footer">Termin vereinbaren</a>
                             </div>
                         </li>
                     </ul>
