--- a/ejs/views/components/rooms.ejs
+++ b/ejs/views/components/rooms.ejs
@@ -15,40 +15,40 @@
                         <div class="col-md-3 col-sm-6 project-item mix workspace">
                           <div class="thumb">
                               <div class="image">
-                                <img src="img/portfolio_01.jpg">
+                                <img src="img/rooms_01.jpg">
                               </div>
                               <div class="hover-effect">
-                                <a href="img/portfolio_big_01.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                <a href="img/rooms_01_large.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                               </div>
                           </div>
                         </div>
                         <div class="col-md-3 col-sm-6 project-item mix workspace">
                           <div class="thumb">
                               <div class="image">
-                                <img src="img/portfolio_02.jpg">
+                                <img src="img/rooms_02.jpg">
                               </div>
                               <div class="hover-effect">
-                                <a href="img/portfolio_big_02.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                <a href="img/rooms_02_large.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                               </div>
                           </div>
                         </div>
                         <div class="col-md-3 col-sm-6 project-item mix technology">
                           <div class="thumb">
                               <div class="image">
-                                <img src="img/portfolio_03.jpg">
+                                <img src="img/rooms_03.jpg">
                               </div>
                               <div class="hover-effect">
-                                <a href="img/portfolio_big_03.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                <a href="img/rooms_03_large.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                               </div>
                           </div>
                         </div>
                         <div class="col-md-3 col-sm-6 project-item mix city">
                           <div class="thumb">
                               <div class="image">
-                                <img src="img/portfolio_04.jpg">
+                                <img src="img/rooms_04.jpg">
                               </div>
                               <div class="hover-effect">
-                                <a href="img/portfolio_big_04.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
+                                <a href="img/rooms_04_large.jpg" data-lightbox="image-1"><i class="fa fa-search"></i></a>
                               </div>
                           </div>
                         </div>
