--- a/ejs/views/components/footer.ejs
+++ b/ejs/views/components/footer.ejs
@@ -1,5 +1,5 @@
 
-            <footer>
+            <footer id="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
