--- a/ejs/views/components/header.ejs
+++ b/ejs/views/components/header.ejs
@@ -15,7 +15,7 @@
             <!--/.navbar-header-->
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#" class="scroll-top">Home</a></li>
+                    <li><a href="/">Home</a></li>
                     <li><a href="#" class="scroll-link" data-id="about">Was wir machen</a></li>
                     <li><a href="#" class="scroll-link" data-id="portfolio">Räumlichkeiten</a></li>
                     <li><a href="#" class="scroll-link" data-id="blog">Neuigkeiten</a></li>
