--- a/ejs/views/components/news.ejs
+++ b/ejs/views/components/news.ejs
@@ -13,7 +13,7 @@
                         <div class="col-md-6">
                             <div class="blog-item b1">
                                 <div class="thumb">
-                                    <img src="img/blog_01.jpg" alt="">
+                                    <img  src="img/urlaubsplan.jpg" alt="">
                                     <div class="text-content">
                                         <h4>Der neuer Urlaubsplan ist da</h4>
                                         <span>Posted: <em>Eva Finkbeiner</em>  /  Date: <em>11 Aug 2017</em>  /  Category: <em>Urlaubsplan</em></span>
@@ -24,7 +24,7 @@
                         <div class="col-md-6">
                             <div class="blog-item second-blog b2">
                                 <div class="thumb">
-                                    <img src="img/blog_02.jpg" alt="">
+                                    <img src="img/unterwegs.jpg" alt="">
                                     <div class="text-content">
                                         <h4>Unterwegs mit den Kindern</h4>
                                         <span>Posted: <em>Eva Finkbeiner</em>  /  Date: <em>24 Jul 2017</em>  /  Category: <em>Bild</em></span>
@@ -35,10 +35,10 @@
                         <div class="col-md-6">
                             <div class="blog-item b3">
                                 <div class="thumb">
-                                    <img src="img/blog_03.jpg" alt="">
+                                    <img src="img/basteln_1.jpg" alt="">
                                     <div class="text-content">
-                                        <h4>Das neues Spielzeug ist angekommen</h4>
-                                        <span>Posted: <em>Eva Finkbeiner</em>  /  Date: <em>16 Jul 2017</em>  /  Category: <em>Neuigkeit</em></span>
+                                        <h4>Bastelnachmittag mit den Kindern</h4>
+                                        <span>Posted: <em>Eva Finkbeiner</em>  /  Date: <em>16 Jul 2017</em>  /  Category: <em>Bild</em></span>
                                     </div>
                                 </div>
                             </div>
@@ -48,15 +48,18 @@
                         <div class="col-md-12">
                             <div class="pop">
                               <span>✖</span>
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin quis neque lacinia, porta nulla in, pellentesque ante. Vivamus in luctus mauris, non pharetra nibh. Morbi porttitor nisl sit amet velit pellentesque consequat. Etiam blandit libero turpis, id vehicula leo posuere a. In vel massa sollicitudin, tincidunt massa et, tincidunt ex.<br><br>Duis volutpat condimentum mollis. Sed eleifend libero ut viverra mattis. Suspendisse consectetur diam dolor, ut efficitur sem finibus vel. Vivamus tristique lacus sed dapibus varius. Fusce pharetra, quam quis congue pretium, ante dui imperdiet ipsum, eget lobortis leo leo sed diam.</p>
+                              <br/>
+                              <img src="img/urlaubsplan.jpg" alt="">
                             </div>
                             <div class="pop2">
                               <span>✖</span>
-                              <p>Praesent purus leo, aliquet et efficitur id, pulvinar scelerisque enim. Maecenas a arcu sagittis, ornare ante ut, suscipit lectus. Donec dolor ipsum, laoreet nec metus non, tempus elementum massa. Donec non elit rhoncus, vestibulum enim sed, rutrum arcu. Vestibulum et purus ac diam condimentum volutpat sed ac est. Phasellus interdum tortor sem. Quisque sit amet condimentum sem. Phasellus luctus, felis sit amet pulvinar luctus, lectus dui mattis tellus, et placerat nunc ante at lacus.<br><br>Vivamus vestibulum, nisi sed placerat accumsan, felis felis venenatis tortor, vel condimentum arcu neque vel mauris. Donec a magna gravida, egestas libero non, molestie massa. Integer ut dolor eget magna congue gravida ut at arcu. Vivamus maximus neque quis luctus tempus. Vestibulum consequat a justo id feugiat. </p>
+                              <br/>
+                              <img width="1000px" src="img/unterwegs.jpg" alt="">
                             </div>
                             <div class="pop3">
                               <span>✖</span>
-                              <p>Nullam rhoncus, orci et iaculis sodales, quam lectus suscipit augue, ut auctor massa dolor id metus. Nulla porta ut diam sodales dignissim. Ut sit amet augue vel justo laoreet dignissim. Maecenas vitae sollicitudin eros. In commodo placerat cursus. Quisque malesuada, nisl ac lacinia commodo, justo eros maximus ex, quis cursus odio erat at neque. Sed tincidunt eu dolor eget posuere.<br><br>Curabitur sit amet elit sit amet ligula eleifend aliquam quis eget quam. Mauris id mi nec justo venenatis tincidunt at ac massa. Sed et volutpat nunc. Quisque at urna quam. Duis sit amet neque eget quam iaculis iaculis. Quisque maximus porta elementum. Nam ac mattis erat, quis accumsan odio.</p>
+                              <br/>
+                              <img width="1000px" src="img/basteln_1.jpg" alt="">
                             </div>
                         </div>
                     </div>
