--- a/nounou/src/components/Layout/Layout.scss
+++ b/nounou/src/components/Layout/Layout.scss
@@ -1,6 +1,6 @@
 
 
-.container{
+.layout{
 
     display: flex;
     flex-direction: column;
@@ -11,7 +11,7 @@
         width: 100%;
         height: 100%;
         padding-bottom: 7%;
-        padding-top: 5%;
+        padding-top: 3%;
         flex-grow: 1;
     }
 
