--- a/nounou/src/components/Layout/Layout.scss
+++ b/nounou/src/components/Layout/Layout.scss
@@ -7,7 +7,8 @@
     height:100vh;
 
     .content-container{
-        background-color:#f3f3f3;
+        //background-color:#f3f3f3;
+        background-color:#faefef;
         width: 100%;
         height: 100%;
         padding-bottom: 7%;
