--- a/nounou/src/components/Main/Main.scss
+++ b/nounou/src/components/Main/Main.scss
@@ -5,6 +5,6 @@
     border-radius: 5px;
     box-shadow: 0px 0px 8px -4px rgba(0,0,0,0.5);
     text-align: justify;
-    overflow: auto;
+    overflow-y: auto;
     padding: 2%;
 }
